fix checkbox, radio, and switch alignment

--- a/src/components/_checkbox.scss
+++ b/src/components/_checkbox.scss
@@ -76,7 +76,6 @@ $eve-checkbox-mark-border-width: .125rem;
 }
 
 .eve-checkbox-control {
-    align-items: center;
     display: flex;
     font-size: $eve-font-normal;
     word-break: break-word;
