--- a/src/components/_radio.scss
+++ b/src/components/_radio.scss
@@ -70,7 +70,6 @@ $eve-radio-size: 1.125rem;
 }
 
 .eve-radio-control {
-    align-items: center;
     display: flex;
     font-size: $eve-font-normal;
     word-break: break-word;
