--- a/src/components/_switch.scss
+++ b/src/components/_switch.scss
@@ -65,7 +65,6 @@ $eve-switch-height: 1.125rem;
 }
 
 .eve-switch-control {
-    align-items: center;
     display: flex;
     font-size: $eve-font-normal;
     word-break: break-word;
